fix list overflow

--- a/src/styles/jobs.css
+++ b/src/styles/jobs.css
@@ -6,6 +6,7 @@
 .job-list{
     max-height: 500px;
     overflow-y: auto;
+    margin-bottom: 6rem;
 }
 
 .job-skills{
